--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,15 @@
   })();
 
 </script>
+
+<meta name="title" content="Campanha Ajude Atibaia - Compartilhe esta idéia" />
+<meta name="url" content="http://www.ajudeatibaia.com.br" />
+<meta name="description" content="Campanha de mobilização social para auxílio aos moradores de Atibaia afetados pelos alagamentos causados pelas chuvas." />
+<meta name="keywords" content="enchente, alagamento, atibaia, doação, ajuda, solidariedade" />
+<meta name="autor" content="Rafael Matuoka Chiocchetti" />
+<meta name="company" content="Korewa Web" />
+<meta name="revisit-after" content="5" />
+<link rev="made" href="mailto:rmatuoka@korewa.com.br" />
 </head>
 <body>
 <div id="Geral">
