--- a/public/stylesheets/estilo.css
+++ b/public/stylesheets/estilo.css
@@ -85,9 +85,12 @@ body
 	{
 		width:281px;
 		height:335px;
+		display: -moz-inline-stack;
 		display:inline-block;
 		vertical-align:top;
 		margin-left:17px;
+		zoom: 1;
+        *display: inline;
 	}
 	
 		#Geral #BoxCentral #Divulge .imagem
@@ -117,8 +120,11 @@ body
 	{
 		width:419px;
 		height:335px;
+		display: -moz-inline-stack;
 		display:inline-block;
 		vertical-align:top;
+		zoom: 1;
+        *display: inline;
 	}
 	
 	#Geral #BoxCentral #Doar
@@ -128,6 +134,8 @@ body
 		display:inline-block;
 		vertical-align:top;
 		margin:0px 30px 0px 30px;
+		zoom: 1;
+        *display: inline;
 	}
 	
 		#Geral #BoxCentral #Doar p
@@ -141,17 +149,23 @@ body
 	{
 		width:200px;
 		height:260px;
+		display: -moz-inline-stack;
 		display:inline-block;
 		vertical-align:top;
+		zoom: 1;
+        *display: inline;
 	}
 	
 	#Geral #BoxCentral #Redes #Facebook
 	{
 		width:200px;
 		height:260px;
+		display: -moz-inline-stack;
 		display:inline-block;
 		vertical-align:top;
 		background-color:#fff;
+		zoom: 1;
+        *display: inline;
 	}
 	
 	#Geral #Apoio
