--- a/public/stylesheets/estilo.css
+++ b/public/stylesheets/estilo.css
@@ -207,6 +207,7 @@ body
 		background-image:url(../images/bg_box_int.png);
 		background-repeat:repeat-y;
 		padding:15px;
+		margin-bottom:20px;
 	}
 	
 .clear
