--- a/public/stylesheets/estilo.css
+++ b/public/stylesheets/estilo.css
@@ -48,6 +48,13 @@ body
 		{
 			margin-left:666px;
 		}
+		
+		#Geral #Content #Logo
+		{
+			position:absolute;
+			top:40px;
+			left:210px;
+		}
 	
 	#Geral #BoxHeader
 	{
