--- a/public/stylesheets/estilo.css
+++ b/public/stylesheets/estilo.css
@@ -49,7 +49,8 @@ body
 		#Geral #Content #Selo
 		{
 			float:right;
-			margin-right:166px;
+			margin-right:146px;
+			margin-top:30px;
 		}
 		
 		#Geral #Content #Logo
