--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@ function Validar()
 				</span>
             </div>
             <div id="Video">
-				<object width="485" height="297"><param name="movie" value="http://www.youtube.com/v/tL2d1zQzjd4?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/tL2d1zQzjd4?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="485" height="297"></embed></object>
+				<object width="483" height="297"><param name="movie" value="http://www.youtube.com/v/9neUa5OphOQ?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/9neUa5OphOQ?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="483" height="297"></embed></object>
 				<br /><br /><%=link_to "Ver todos os vídeos", videos_path%>
 			</div>
         </div>
