lista de doacoes

--- a/app/views/arrecadamos/index.html.erb
+++ b/app/views/arrecadamos/index.html.erb
@@ -3,7 +3,24 @@
                 <h1><img src="images/tit_oque.png" title="O que arrecadamos?" alt="O que arrecadamos?" /></h1>
             	<div>
                 	<p>
-                		Aguarde...
+                		<ul style="text-align:left;">
+							<li>35.000 Folders</li>
+							<li>20.000 Cartazes</li>
+							<li>150 colchões</li>
+							<li>Louças e Talheres</li>
+							<li>Camisetas Masculinas</li>
+							<li>Maquina de Lavar Roupa</li>
+							<li>5 Tvs</li>
+							<li>Brinquedos</li>
+							<li>Muitos materiais de Limpeza</li>
+							<li>3 cadeiras de Jantar</li>
+							<li>Calçados Masculinos</li>
+							<li>Calçados Femininos</li>
+							<li>Calçados Infantis</li>
+							<li>Roupas de Cama de Solteiro</li>
+							<li>15 Cestas Básicas</li>
+							<li>800 copos de água</li>
+						</ul>	
 					</p>
                 </div>
                 <span>
