--- a/app/views/layouts/homedois.html.erb
+++ b/app/views/layouts/homedois.html.erb
@@ -115,7 +115,7 @@
         
         <div id="Fot">
         <div id="Fot_box">Dúvidas e solicitações:
-        contato@ajudeatibaia.com.br
+        <a href="mailto:contato@ajudeatibaia.com.br">contato@ajudeatibaia.com.br</a>
         <a href="http://www.facebook.com/ajudeatibaia">www.facebook.com/ajudeatibaia</a>
         <a href="http://www.twitter.com/ajudeatibaia">www.twitter.com/ajudeatibaia</a></div>
         <div id="Fot_box2"><p>Telefone: (11) 2427-8880</p></div>
